k8s-manifests/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argo.jose-quijivix.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
