k8s-manifests/portafolio-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portafolio-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`portafolio.jose-quijivix.com`)
      kind: Rule
      services:
        - name: portafolio-service
          port: 80
